fixed responsive issues on smaller screens

--- a/style.css
+++ b/style.css
@@ -63,6 +63,9 @@ p {
 
 #welcomeText {
   text-align: center;
+  grid-column-start: 1;
+  grid-column-end: 3;
+  grid-row: 1;
 }
 
 #welcomeText h1 {
@@ -80,6 +83,7 @@ p {
   display: grid;
   grid-gap: 27px;
   grid-template-rows: repeat(1, 4fr);
+  grid-row: 2;
 }
 .formSectionWithButton form label {
   color: #4d4949;
@@ -90,7 +94,7 @@ p {
   background-color: hsl(248, 32%, 49%);
   box-shadow: 1px 3px 0px rgba(0, 0, 0, 0.35);
   border-radius: 7px;
-  padding: 15px 48px;
+  padding: 20px 48px;
 }
 
 .buttonBoldText {
@@ -118,7 +122,6 @@ form {
   background-color: #fff;
   border-radius: 15px;
   padding: 30px 20px;
-  gap: 14px;
   font-weight: bold;
 }
 
@@ -148,6 +151,11 @@ input {
   text-transform: uppercase;
   font-size: 1.1em;
   width: 100%;
+  padding: 15px 0;
+}
+
+.buttonBottom button {
+  padding: 15px ​10px;
 }
 ::placeholder {
   visibility: hidden;
@@ -249,6 +257,7 @@ footer {
 
   .formSectionWithButton {
     width: 550px;
+    grid-row: 1;
     grid-column-start: 5;
     grid-column-end: 9;
     margin-left: 60px;
